--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ botocore==1.17.17
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
-cloud-init==20.1
+cloud-init==20.2
 colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
@@ -22,12 +22,14 @@ Django==3.0.8
 djangorestframework==3.11.0
 docutils==0.15.2
 entrypoints==0.3
+et-xmlfile==1.0.1
 gensim==3.8.3
 httplib2==0.14.0
 hyperlink==19.0.0
 idna==2.8
 importlib-metadata==1.5.0
 incremental==16.10.1
+jdcal==1.4.1
 Jinja2==2.10.1
 jmespath==0.10.0
 JPype1==0.7.5
@@ -48,6 +50,7 @@ more-itertools==4.2.0
 netifaces==0.10.4
 numpy==1.19.0
 oauthlib==3.1.0
+openpyxl==3.0.4
 pandas==1.0.5
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
@@ -60,7 +63,7 @@ pyOpenSSL==19.0.0
 pyrsistent==0.15.5
 pyserial==3.4
 PySocks==1.7.1
-python-apt==2.0.0
+python-apt==2.0.0+ubuntu0.20.4.1
 python-dateutil==2.8.1
 python-debian===0.1.36ubuntu1
 pytz==2020.1
